desktop-themes/ContrastHigh/gtk-3.0/gtk-widgets.css
/* ... */
.view.rubberband,
.rubberband {
    border-color: @theme_fg_color;
    border-style: solid;
    border-width: 1px;

    background-color: alpha(@theme_internal_bg, 0.35);
}

.grip {
	background-color: transparent;
	background-image: url("resize-grip.svg");
}

.separator {
    color: @theme_insensitive_border;
}

.floating-bar {
    background-color: @theme_insensitive_bg;
    border-width: 1px;
    border-radius: 3px;
    border-style: solid;
}

.floating-bar.top {
    border-top-width: 0;
    border-top-right-radius: 0;
    border-top-left-radius: 0;
}

.floating-bar.right {
    border-right-width: 0;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.floating-bar.bottom {
    border-bottom-width: 0;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.floating-bar.left {
    border-left-width: 0;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

.floating-bar .button {
    background-color: transparent;
    border-style: none;
}

GtkColorButton.button {
    padding: 1px 16px;
}

GtkColorSwatch {
    border-width: 1px;
    border-style: solid;
    border-color: @theme_fg_color;
}

/******************
 * Colored states *
 ******************/
.info {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.warning {
    background-color: @warning_bg_color;
    color: @warning_fg_color;
}

.question {
    background-color: @question_bg_color;
    color: @question_fg_color;
}

.error {
    background-color: @error_bg_color;
    color: @error_fg_color;
}

/*************
 * Level bar *
 *************/
GtkLevelBar {
    -GtkLevelBar-min-block-width: 34;
    -GtkLevelBar-min-block-height: 3;
}

GtkLevelBar.vertical {
    -GtkLevelBar-min-block-width: 3;
    -GtkLevelBar-min-block-height: 34;
}

.level-bar.trough {
    padding: 2px;
}

.level-bar.fill-block {
    padding: 2px;

    border-width: 1px;
    border-style: solid;

    background-color: @theme_highlight_color;
}

.level-bar.fill-block.level-high {
    background-color: @success_color;
    border-color: darker(@success_color);
}

.level-bar.fill-block.level-low {
    background-color: @warning_bg_color;
    border-color: darker(@warning_bg_color);
}

.level-bar.fill-block.empty-fill-block {
    background-color: transparent;
    border-color: @theme_border_color;
}

.level-bar.indicator-discrete.fill-block.horizontal {
    margin: 0 1px;
}

.level-bar.indicator-discrete.fill-block.vertical {
    margin: 1px 0;
}

/***********
 * Buttons *
 ***********/
.button {
    border-width: 2px;
    border-style: solid;
    border-color: @theme_button_fg;

    border-radius: 3px;

    background-color: @theme_button_bg;
    padding: 1px 4px;
    color: @theme_button_fg;
}

.button.image-button {
    padding: 5px;
}

.button.default {
    text-shadow: none;
    color: @theme_fg_color;
    border-color: @theme_highlight_border;
}

/* ie. mate-control-center */
.button.flat {
    padding: 0px;
    border-color: transparent;
    background-color: transparent;
    background-image: none;
    color: @theme_fg_color;
    box-shadow: inset 0 1px rgba(255,255,255,0), 0 1px rgba(255,255,255,0);
    text-shadow: none;
    icon-shadow: none;
    border-image: none;
}

.button.flat.hover {
	border-radius: 3px;
}

.button:active,
.button:checked {
    background-color: @theme_button_active_bg;
    color: @theme_base_color;
    border-color: @theme_button_fg;
}

.button:insensitive {
    background-color: @theme_button_insensitive_bg;
    border-color: @theme_button_insensitive_border;
}

.button:insensitive:active,
.button:insensitive:checked {
    background-color: @theme_button_insensitive_active_bg;
    border-color: @theme_button_insensitive_active_border;
}

.button *:insensitive {
    color: @theme_button_insensitive_fg;
}

.button:active *:insensitive,
.button:checked *:insensitive {
    color: @theme_button_insensitive_active_fg;
}

.button:hover {
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
    color: @theme_base_color;
}

.button:hover:active,
.button:hover:checked {
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
}

GtkComboBox .separator {
    /* always disable separators */
    -GtkWidget-wide-separators: true;
    -GtkWidget-horizontal-separator: 0;
    -GtkWidget-vertical-separator: 0;
}

GtkComboBox *:insensitive {
    color: @theme_button_insensitive_fg
}

/***********
 * Entries *
 ***********/
.entry {
    border-width: 2px;
    border-style: solid;
    border-color: @theme_fg_color;
    border-radius: 3px;
    background-color: @theme_entry_bg;
    padding: 4px 4px 5px 4px;
}

.entry:selected {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

/* needed for webkit/GtkStyle compatibility */
.entry:active {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.entry:focus {
    border-width: 2px;
    border-color: @theme_highlight_color;
}

.entry:insensitive {
    border-color: @theme_insensitive_border;
    background-color: @theme_insensitive_bg;
    color: @theme_insensitive_color;
}

/**************
 * Comboboxes *
 **************/
GtkComboBox *:hover {
    color: @theme_insensitive_bg;
}

GtkComboBox .separator {
    color: transparent;
}

GtkComboBox .button {
    padding: 3px 4px;
}

.combobox-entry .button,
.toolbar .combobox-entry .button {
    background-color: @theme_entry_bg;
    color: @theme_fg_color;
    border-width: 2px;
    border-color: @theme_fg_color;
}

.combobox-entry .button:hover {
    background-color: @theme_fg_color;
}

.combobox-entry .button:active,
.combobox-entry .button:checked {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.combobox-entry .button:insensitive {
    background-color: @theme_insensitive_bg;
    color: @theme_internal_bg;
    border-color: @theme_insensitive_border;
}

.combobox-entry .entry:first-child {
    border-right-width: 0px;
    border-radius: 3px 0px 0px 3px;
}
/* ... */

